# android-tools-win

./: README.md
.github/workflows/: main.yml
mingw-w64-adbwinapi/: 0001-adbwinusb-fix-build.patch  CMakeLists.txt  PKGBUILD
mingw-w64-android-tools/: 0001-android-tools-cmake.patch  0002-android-tools-vendor.patch  PKGBUILD
